rename main styles file

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -40,7 +40,7 @@
 @git-removed:  #d72862;
 
 /*
-  ┌───────────┐
-  │ flyweight │
-  └───────────┘
+  ┌──────────┐
+  │ eclectic │
+  └──────────┘
 */
