--- a/styles/eclectic.less
+++ b/styles/eclectic.less
@@ -1,9 +1,9 @@
 /*
-  flyweight ────────────────────────────────┐
-  │                                         │
-  │ https://atom.io/themes/flyweight-syntax │
-  │                                         │
-  └─────────────────────────────────── syntax
+  eclectic ────────────────────────────────┐
+  │                                        │
+  │ https://atom.io/themes/eclectic-syntax │
+  │                                        │
+  └────────────────────────────────── syntax
 */
 
 @import './editor';
@@ -15,7 +15,6 @@
 @import './languages/java';
 @import './languages/js';
 @import './languages/json';
-@import './languages/jsx';
 @import './languages/ruby';
 @import './syntax-variables';
 
@@ -34,7 +33,8 @@
     &.in {
       color: @keyword;
     }
-    &.comparison {
+    &.comparison,
+    &.logical {
       color: @foreground-alt;
     }
   }
@@ -115,7 +115,7 @@
 }
 
 /*
-  ┌───────────┐
-  │ flyweight │
-  └───────────┘
+  ┌──────────┐
+  │ eclectic │
+  └──────────┘
 */
