--- a/styles/languages/gfm.less
+++ b/styles/languages/gfm.less
@@ -14,7 +14,7 @@
     color: @accent-1;
   }
   .support{
-    background: fadeout(@accent-2, 20%);
+    background: @muted;
     color: @background;
     border-radius: 3px;
   }
