--- a/styles/languages/babel.less
+++ b/styles/languages/babel.less
@@ -1,42 +1,44 @@
-.meta {
-  &.function,
-  .function.arrow {
-    .variable.other.readwrite {
+.syntax--meta {
+  &.syntax--function,
+  .syntax--function.syntax--arrow {
+    .syntax--variable.syntax--other.syntax--readwrite {
       color: @accent-3-alt;
     }
   }
-  &.function-call {
-    .entity.name.function,
-    .punctuation.definition.parameters {
+  &.syntax--function-call {
+    .syntax--entity.syntax--name.syntax--function {
       color: @foreground;
     }
+    .syntax--punctuation.syntax--definition.syntax--parameters {
+      color: @accent-3;//@foreground;
+    }
   }
-  &.embedded.expression {
-    .punctuation.embedded,
-    .variable {
+  &.syntax--embedded.syntax--expression {
+    .syntax--punctuation.syntax--embedded,
+    .syntax--variable {
       color: @foreground-alt;
     }
-    .keyword.operator.ternary {
+    .syntax--keyword.syntax--operator.syntax--ternary {
       color: @accent-3-alt;
     }
   }
 }
 
-.support.object.node {
+.syntax--support.syntax--object.syntax--node {
   color: @accent-1;
 }
 
-.object.key .string.unquoted {
+.syntax--object.syntax--key .syntax--string.syntax--unquoted {
   color: @foreground-alt;
 }
 
-.entity.quasi.element {
-  .variable,
-  .punctuation {
+.syntax--entity.syntax--quasi.syntax--element {
+  .syntax--variable,
+  .syntax--punctuation {
     color: @string-alt;
   }
 }
 
-.keyword.control.module {
+.syntax--keyword.syntax--control.syntax--module {
   color: @accent-1;
 }
