--- a/styles/languages/html.less
+++ b/styles/languages/html.less
@@ -1,15 +1,15 @@
-.entity {
-  &.name.tag {
+.syntax--entity {
+  &.syntax--name.syntax--tag {
     color: @accent-1;
-    .string {
+    .syntax--string {
       color: @string;
     }
   }
 }
 
-.punctuation.definition.tag {
+.syntax--unctuation.syntax--definition.syntax--tag {
   color: @accent-1-alt;
-  .sgml & {
+  .syntax--sgml & {
     color: @syntax-text-color;
   }
 }
