--- a/styles/languages/json.less
+++ b/styles/languages/json.less
@@ -1,32 +1,32 @@
-.source.json {
-  .meta.structure.dictionary {
-    .string {
+.syntax--source.syntax--json {
+  .syntax--meta.syntax--structure.syntax--dictionary {
+    .syntax--string {
       color: @accent-1;
     }
-    .punctuation.definition {
+    .syntax--punctuation.syntax--definition {
       color: @accent-1-alt;
-      &.dictionary,
-      &.array {
+      &.syntax--dictionary,
+      &.syntax--array {
         color: @foreground;
       }
     }
 
-    .dictionary.value {
-      .string {
+    .syntax--dictionary.syntax--value {
+      .syntax--string {
         color: @accent-3;
-        .punctuation.definition {
+        .syntax--punctuation.syntax--definition {
           color: @accent-3-alt;
         }
       }
-      .dictionary {
-        .string {
+      .syntax--dictionary {
+        .syntax--string {
           color: @accent-1;
-          .punctuation.definition {
+          .syntax--punctuation.syntax--definition {
             color: @accent-1-alt;
           }
         }
-        .dictionary.value {
-          .string {
+        .syntax--dictionary.syntax--value {
+          .syntax--string {
             color: @accent-3;
           }
         }
