--- a/styles/languages/ruby.less
+++ b/styles/languages/ruby.less
@@ -1,29 +1,29 @@
-.source.ruby {
-  .string.double.quoted {
-    .embedded {
+.syntax--source.syntax--ruby {
+  .syntax--string.syntax--double.syntax--quoted {
+    .syntax--embedded {
       color: @string-alt;
     }
   }
-  .punctuation.separator.variable,
-  .variable.block {
+  .syntax--punctuation.syntax--separator.syntax--variable,
+  .syntax--variable.syntax--block {
     color: @accent-1;
   }
-  .variable.instance {
+  .syntax--variable.syntax--instance {
     color: @accent-2;
-    .punctuation.definition {
+    .syntax--punctuation.syntax--definition {
       color: @accent-2-alt;
     }
   }
-  .punctuation.inheritance {
+  .syntax--punctuation.syntax--inheritance {
     color: @accent-1;
   }
-  .constant.symbol {
+  .syntax--constant.syntax--symbol {
     color: @string;
-    .punctuation.definition {
+    .syntax--punctuation.syntax--definition {
       color: @string-alt;
     }
   }
-  .keyword.other.special-method {
+  .syntax--keyword.syntax--other.syntax--special-method {
     color: @accent-1;
   }
 }
