--- a/styles/languages/js.less
+++ b/styles/languages/js.less
@@ -1,30 +1,30 @@
-.source.js {
-  .meta {
-    &.import,
-    &.export {
-      .keyword.control {
+.syntax--source.syntax--js {
+  .syntax--meta {
+    &.syntax--import,
+    &.syntax--export {
+      .syntax--keyword.syntax--control {
         color: @accent-1;
       }
     }
-    &.method-call {
-      .entity.name.function {
+    &.syntax--method-call {
+      .syntax--entity.syntax--name.syntax--function {
         color: @foreground;
       }
     }
   }
-  .variable.default {
+  .syntax--variable.syntax--default {
     color: @accent-1;
   }
-  .storage {
+  .syntax--storage {
     color: @keyword;
   }
-  .string.template {
-    .embedded {
+  .syntax--string.syntax--template {
+    .syntax--embedded {
       &,
-      &.punctuation,
-      .constant,
-      .variable,
-      .keyword.operator {
+      &.syntax--punctuation,
+      .syntax--constant,
+      .syntax--variable,
+      .syntax--keyword.syntax--operator {
         color: @string-alt;
       }
     }
